# genlm-backend

./: .gitignore  404.html  DEVELOPING.md  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  setup.py  test_oss.py  vllm_oss.py
.github/workflows/: api-review.yml  api-surface.yml  coverage.yml  docs.yml  gpu-queue-watchdog.yml  pytest.yml
async_llm/: __init__.py  async_worker.py  cache.py  hf_llm.py  llm.py  sampler.py  trie.py  vocabulary.py
benchmark/: README.md  benchmark_backend.py  benchmark_mass_sum.py  benchmark_mlx.py  benchmark_optimizations.py  benchmark_prefix_caching.py  benchmark_v0_v1.py  util.py
docs/: gen_reference_page.py  index.md
experiments/: prefix_caching.ipynb  util.py  vllm_optimizations.ipynb
genlm/backend/: __init__.py  cache.py
genlm/backend/llm/: __init__.py  base.py  engine_control.py  hf.py  mlx.py  sgl.py  vllm.py  vllmV1.py  vllm_reference.py
genlm/backend/tokenization/: __init__.py  bytes.py  token.py  vocab.py
genlm/backend/trie/: async_impl.py  base.py  parallel.py
genlm_backend/: util.py  vocabulary.py
genlm_backend/llm/: __init__.py  base.py  hf.py  vllm.py  vllm_reference.py
genlm_backend/tokenization/: __init__.py  bytes.py  vocab.py
genlm_backend/trie/: __init__.py  async_impl.py  base.py  parallel.py
notes/: Untitled.ipynb
reference/SUMMARY/: index.html
reference/genlm/backend/__init__/: index.html
reference/genlm/backend/cache/: index.html
reference/genlm/backend/llm/__init__/: index.html
reference/genlm/backend/llm/base/: index.html
reference/genlm/backend/llm/hf/: index.html
reference/genlm/backend/llm/mlx/: index.html
reference/genlm/backend/llm/sgl/: index.html
reference/genlm/backend/llm/vllm/: index.html
reference/genlm/backend/tokenization/__init__/: index.html
reference/genlm/backend/tokenization/bytes/: index.html
reference/genlm/backend/tokenization/token/: index.html
reference/genlm/backend/tokenization/vocab/: index.html
reference/genlm/backend/trie/__init__/: index.html
reference/genlm/backend/trie/async_impl/: index.html
reference/genlm/backend/trie/base/: index.html
reference/genlm/backend/trie/parallel/: index.html
search/: search_index.json
src/genlm_backend/llm/: hf.py
tests/: conftest.py  smoke_capture_sampler.py  smoke_capture_sampler.sbatch  test_agreement.py  test_batch_subbatch.py  test_cache.py  test_duplicates.py  test_engine_native.py  test_hf_llm.py  test_hf_lora.py  test_llm.py  test_llm_agreement.py  test_logprobs_capture.py  test_lora.py  test_mlx.py  test_per_request_lora.py  test_sgl.py  test_sgl_lora.py  test_sub_batches.py  test_token.py  test_trie.py  test_vllm.py  test_vllm_lora.py  test_vocabulary.py
