[project]
name = "genlm-backend"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Ben LeBrun" },
]
dependencies = [
    "torch",
    "transformers>=4.57.1,<5.0.0.rc0",
    "sentencepiece",
    "protobuf",
    "accelerate",
    "bitsandbytes; sys_platform == 'linux'",
    "numba",
    "vllm>=0.11.0; sys_platform == 'linux'",
    "triton>=3.2.0; sys_platform == 'linux'",
]

[project.optional-dependencies]
mlx = [
    "mlx",
    "mlx-lm"
]
docs = [
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-material",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-section-index",
]

[tool.setuptools.packages.find]
include = ["genlm", "genlm/backend"]
exclude = ["benchmark*", "tests*"]

[build-system]
requires = ["setuptools>=64.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "arsenal>=3.1",
    "hypothesis>=6.150.2",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

[tool.setuptools_scm]
