[project]
name = "genlm-backend"
dynamic = ["version"]
description = ""
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Ben LeBrun" },
]
dependencies = [
    "torch",
    "transformers>=4.36.0,<5.0.0.rc0",
    "sentencepiece",
    "protobuf",
    "accelerate",
    "bitsandbytes; sys_platform == 'linux'",
    "numba",
]

[project.optional-dependencies]
mlx = [
    "mlx",
    "mlx-lm"
]
vllm = [
    "vllm>=0.10.0,<0.11.0; sys_platform == 'linux'",
    "triton>=3.2.0; sys_platform == 'linux'",
]
sgl = [
    "sglang>=0.5.8,<0.5.9",
]
lora = [
    # peft >=0.19 imports ``EmbeddingParallel`` from
    # ``transformers.integrations.tensor_parallel``, which only exists in a
    # very recent transformers branch; on the transformers pin above (which
    # resolves to 4.57.x) this raises ImportError at LoRA load time. Pin
    # below 0.19 until peft's TP handling catches up.
    "peft>=0.17,<0.19",
]
docs = [
    "mkdocs",
    "mkdocstrings[python]",
    "mkdocs-material",
    "mkdocs-gen-files",
    "mkdocs-literate-nav",
    "mkdocs-section-index",
]

[tool.setuptools.packages.find]
include = ["genlm", "genlm/backend"]
exclude = ["benchmark*", "tests*"]

[build-system]
requires = ["setuptools>=64.0", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
